   * Call to "open_buffer" changed: unit must be a valid fortran unit > 0;
     max number of records is no longer specified; a new flag explicitly
     specifies if writing to RAM buffer is required. Functionalities of 
     Modules/buffers.f90 have been considerably modified and extended.

Fixed in svn version:

   * PWscf: spin-polarized HSE for PAW was incorrectly implemented
   * PHonon: epsil + paw was not working with k-point parallelization.
   * PHonon: problem with the symmetry analysis in D_6h. The problem appeared
     in special cases after the symmetry reshuffling made by the phonon code.
   * PWscf: starting with uniform charge worked only for non-spin-polarized
     calculations. Not a big deal unless one used HGH or other pseudopotentials
     without atomic charge information
   * PWscf: Forces with finite electric field (lelfield=.true.) and US PP
     were incorrect in parallel execution
   * D3: bug when the crystal has symmetry but the small group of the 
     q-point has no symmetry.
   * Bogus "file not found" error in pp.x when extracting quantities not
     requiring wave functions if these were "collected" - v.5.0.2 only
   * Some quantities calculated in real space (including the charge itself
     when tqr=.true.) were not always accurately computed in parallel
     execution if the number of planes wasn't the same for all processors
   * Bogus symmetry error in NEB due to missing re-initialization
     of fractional translations

Fixed in patches to 5.0.2 version:

   * PW, PP, PHonon: files for DFT+U produced by previous versions
     could no longer be read
   * PHonon: restart with convt=.true. was not working with PAW
   * PHonon: in matdyn.x, displacement patterns were no longer correct
     if eigenvectors of the dynamical matrix were also written to file
   * PHonon: compatibility with files produced by previous releases
     was broken if pools were used
   * VERY NASTY PHonon bug: symmetry Sq=-q+G introduced in v.5.0.2