@@ -151,6 +151,7 @@ We quote in particular:
   \item Burak Himmetoglou (Univ. Minnesota) for DFT+U+J implementation;
   \item Andrei Malashevich (Univ. Berkeley) for calculation of orbital
    magnetization.
+  \item J.-W. Song for Gau-PBE implementation
 \end{itemize}
 
 % \texttt{PWgui} was written by Anton Kokalj (IJS Ljubljana) and is 
